--- a/TABDD/templates/order_locations.html
+++ b/TABDD/templates/order_locations.html
@@ -12,7 +12,7 @@
         <form method="GET" action="/order_locations">
             <label for="datetime-picker">Selecione a Data e Hora:</label>
             <input type="datetime-local" id="datetime-picker" name="selected_datetime" class="form-control mb-3">
-            <button id="search-locations-btn" class="btn btn-primary w-100">Buscar Localizações</button>
+            <button id="search-locations-btn" class="btn btn-primary w-100">Procurar Localizações</button>
         </form>        
 
         {% if order_locations %}
