--- a/TABDD/templates/layout.html
+++ b/TABDD/templates/layout.html
@@ -66,7 +66,7 @@
                         {% if user_logged_in %}
                             Informações do Usuário
                         {% else %}
-                            Login ou Cadastro
+                            Login ou Registar
                         {% endif %}
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
