--- a/TABDD/templates/login.html
+++ b/TABDD/templates/login.html
@@ -10,11 +10,11 @@
         <label for="email">E-mail:</label>
         <input type="email" id="email" name="email" required><br><br>
         
-        <label for="password">Senha:</label>
+        <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
         
         <button type="submit">Login</button>
     </form>
-    <p>Não tem uma conta? <a href="/register">Cadastre-se aqui</a></p>
+    <p>Não tem uma conta? <a href="/register">Registe-se aqui</a></p>
 </body>
 </html>
