--- a/TABDD/templates/product_details.html
+++ b/TABDD/templates/product_details.html
@@ -19,7 +19,7 @@
                     </a>
                     <a href="/logout" class="btn btn-outline-danger">Sair</a>
                 {% else %}
-                    <a href="#" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#loginRegisterModal">Login/Cadastrar</a>
+                    <a href="#" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#loginRegisterModal">Login/Registar</a>
                 {% endif %}
             </div>
         </div>
