--- a/TABDD/templates/register.html
+++ b/TABDD/templates/register.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Cadastro</title>
+    <title>Registo</title>
 </head>
 <body>
-    <h2>Cadastro de Usuário</h2>
+    <h2>Registo do Utilizador</h2>
     <form action="/register" method="POST">
         <div class="mb-3">
             <label for="firstName" class="form-label">Primeiro Nome</label>
@@ -48,7 +48,7 @@
                 <option value="delivery order manager">Gerente de Pedidos de Entrega</option>
             </select>
         </div>
-        <button type="submit" class="btn btn-primary">Cadastrar</button>
+        <button type="submit" class="btn btn-primary">Registar</button>
     </form>       
     <p>Já tem uma conta? <a href="/login">Faça login aqui</a></p>
 </body>
